[FIX] l10n_mx_edi_addenda_mabe

--- a/l10n_mx_edi_addenda_mabe/views/l10n_mx_addenda_mabe_view.xml
+++ b/l10n_mx_edi_addenda_mabe/views/l10n_mx_addenda_mabe_view.xml
@@ -2,6 +2,7 @@
     <template id="l10n_mx_edi_addenda_mabe" name="Addenda Mabe">
         <mabe:Factura
             xmlns:mabe="http://recepcionfe.mabempresa.com/cfd/addenda/v1"
+            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xsi:schemaLocation="http://recepcionfe.mabempresa.com/cfd/addenda/v1 http://recepcionfe.mabempresa.com/cfd/addenda/v1/mabev1.xsd"
             version="1.0"
             tipoDocumento="FACTURA"
