[FIX] l10n_mx_edi_addenda_audi: Fix addenda partner_id

--- a/l10n_mx_edi_addenda_audi/views/l10n_mx_edi_addenda_audi.xml
+++ b/l10n_mx_edi_addenda_audi/views/l10n_mx_edi_addenda_audi.xml
@@ -11,8 +11,8 @@
         >
             <S:Moneda t-att-tipoMoneda="record.currency_id.name" />
             <S:Proveedor
-                t-att-noProveedor="record.audi_supplier_number"
-                t-att-eMail="record.audi_supplier_email"
+                t-att-noProveedor="record.partner_id.audi_supplier_number"
+                t-att-eMail="record.partner_id.audi_supplier_email"
             />
             <S:Referencias t-att-unidadNegocio="record.audi_business_unit" />
             <S:Solicitante t-att-eMail="record.audi_applicant_email" />
