[16.0][UPD] ol_mrp_plm_tier_validation: make progress on stage changes needing approval

--- a/ol_mrp_plm_tier_validation/views/plm_eco_stage_views.xml
+++ b/ol_mrp_plm_tier_validation/views/plm_eco_stage_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="mrp_plm.mrp_eco_stage_view_form" />
         <field name="arch" type="xml">
             <field name="type_ids" position="after">
-                <field name="state" />
+                <field name="approval_state" />
             </field>
         </field>
     </record>
@@ -17,7 +17,7 @@
         <field name="inherit_id" ref="mrp_plm.mrp_eco_stage_view_tree" />
         <field name="arch" type="xml">
             <field name="type_ids" position="after">
-                <field name="state" />
+                <field name="approval_state" />
             </field>
         </field>
     </record>
