--- a/ol_mrp_plm_tier_validation/views/plm_eco_stage_views.xml
+++ b/ol_mrp_plm_tier_validation/views/plm_eco_stage_views.xml
@@ -5,8 +5,8 @@
         <field name="model">mrp.eco.stage</field>
         <field name="inherit_id" ref="mrp_plm.mrp_eco_stage_view_form" />
         <field name="arch" type="xml">
-            <field name="type_ids" position="after">
-                <field name="approval_state" />
+            <field name="final_stage" position="after">
+                <field name="is_approval_stage" />
             </field>
         </field>
     </record>
@@ -16,8 +16,8 @@
         <field name="model">mrp.eco.stage</field>
         <field name="inherit_id" ref="mrp_plm.mrp_eco_stage_view_tree" />
         <field name="arch" type="xml">
-            <field name="type_ids" position="after">
-                <field name="approval_state" />
+            <field name="final_stage" position="after">
+                <field name="is_approval_stage" />
             </field>
         </field>
     </record>
