--- a/ol_mrp_plm_tier_validation/views/plm_eco_stage_views.xml
+++ b/ol_mrp_plm_tier_validation/views/plm_eco_stage_views.xml
@@ -8,6 +8,9 @@
             <field name="final_stage" position="after">
                 <field name="is_approval_stage" />
             </field>
+            <field name="type_ids" position="after">
+                <field name="company_id" />
+            </field>
         </field>
     </record>
 
@@ -18,6 +21,9 @@
         <field name="arch" type="xml">
             <field name="type_ids" position="after">
                 <field name="is_approval_stage" />
+            </field>
+            <field name="type_ids" position="after">
+                <field name="company_id" />
             </field>
         </field>
     </record>
