--- a/ol_mrp_plm_tier_validation/views/plm_eco_view.xml
+++ b/ol_mrp_plm_tier_validation/views/plm_eco_view.xml
@@ -23,6 +23,7 @@
         </field>
     </record>
 
+
     <record id="ol_mrp_eco_tier_validation_eco_tree" model="ir.ui.view">
         <field name="name">mrp.eco.tier.validation.inherit.tree</field>
         <field name="model">mrp.eco</field>
@@ -60,14 +61,14 @@
                     name="action_move_to_prev_stage"
                     type="object"
                     class="oe_highlight"
-                    invisible="not prev_stage_id or state in ('done')"
+                    invisible="not prev_stage_id or state in ('done') or not stage_id"
                 />
                 <button
                     string="Next"
                     name="action_move_to_next_stage"
                     type="object"
                     class="oe_highlight"
-                    invisible="not next_stage_id or state in ('done')"
+                    invisible="not next_stage_id or state in ('done') or not stage_id"
                 />
             </field>
             <field name="approval_ids" position="before">
@@ -90,4 +91,14 @@
         </field>
     </record>
 
+    <record id="ol_mrp_eco_tier_validation_eco_kanban" model="ir.ui.view">
+        <field name="name">mrp.eco.tier.validation.inherit.kanban</field>
+        <field name="model">mrp.eco</field>
+        <field name="inherit_id" ref="mrp_plm.mrp_eco_kanban" />
+        <field name="arch" type="xml">
+            <field name="stage_id" position="attributes">
+                <attribute name="readonly">1</attribute>
+            </field>
+        </field>
+    </record>
 </odoo>
