--- a/ol_mrp_plm_tier_validation/views/plm_eco_view.xml
+++ b/ol_mrp_plm_tier_validation/views/plm_eco_view.xml
@@ -61,14 +61,14 @@
                     name="action_move_to_prev_stage"
                     type="object"
                     class="oe_highlight"
-                    invisible="not prev_stage_id or state in ('done') or not stage_id"
+                    invisible="not prev_stage_id or state in ('done') or not stage_id or stage_id.cancel_stage"
                 />
                 <button
                     string="Next"
                     name="action_move_to_next_stage"
                     type="object"
                     class="oe_highlight"
-                    invisible="not next_stage_id or state in ('done') or not stage_id"
+                    invisible="not next_stage_id or state in ('done') or not stage_id or stage_id.cancel_stage"
                 />
             </field>
             <field name="approval_ids" position="before">
