[FIX]l10n_mx_edi_addenda_audi: Fix round

--- a/l10n_mx_edi_addenda_audi/views/l10n_mx_edi_addenda_audi.xml
+++ b/l10n_mx_edi_addenda_audi/views/l10n_mx_edi_addenda_audi.xml
@@ -26,7 +26,7 @@
                         t-att-codigoImpuesto="record.audi_tax_code"
                         t-att-cantidad="move_line.quantity"
                         t-att-posicion="i"
-                        t-att-montoLinea="move_line.price_unit * move_line.quantity"
+                        t-att-montoLinea="round(move_line.price_unit * move_line.quantity)"
                         t-att-unidadMedida="move_line.product_uom_id.name"
                     >
                         <t t-set="i" t-value="i+1" />
