[UPD] Sync modules with fixes from ONL Repo
These bring in adjustments made based on ONL comments on PR's in their Repo.

--- a/ol_sale_mrp_tags/views/mrp_production_view.xml
+++ b/ol_sale_mrp_tags/views/mrp_production_view.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="mrp.mrp_production_form_view" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='user_id']" position="after">
-                <field name="mrp_sale_id" invisible="1"/>
+                <field name="sale_order_id" invisible="1"/>
                 <field
                     name="tag_ids"
                     widget="many2many_tags"
