Update Conf Qty

--- a/product_configurator_mrp_quantity/views/product_attribute_view.xml
+++ b/product_configurator_mrp_quantity/views/product_attribute_view.xml
@@ -16,6 +16,17 @@
         />
         <field name="type">form</field>
         <field name="arch" type="xml">
+            <xpath expr="//sheet" position="inside">
+                <div class="oe_button_box" name="button_box">
+                    <button
+                        name="update_attribute_value_qty"
+                        type="object"
+                        string="Update Qty"
+                        groups="product_configurator.group_product_configurator_manager"
+                        invisible="not is_qty_required"
+                    />
+                </div>
+            </xpath>
             <xpath expr="//field[@name='price_extra']" position="after">
                 <field
                     name="is_qty_required"
@@ -35,6 +46,9 @@
                     groups="product_configurator.group_product_configurator_manager"
                 />
             </xpath>
+            <field name="exclude_for" position="after">
+                <field name="attribute_value_qty_ids" widget="one2many" mode="tree" />
+            </field>
         </field>
     </record>
 
