--- a/ol_sale_blanket_order/views/sale_blanket_order_line_views.xml
+++ b/ol_sale_blanket_order/views/sale_blanket_order_line_views.xml
@@ -9,7 +9,7 @@
         />
         <field name="arch" type="xml">
             <field name="product_uom" position="after">
-                <field name="customer_lead" optional="hide" />
+                <field name="customer_lead" optional="show" />
             </field>
         </field>
     </record>
