--- a/documents_stock_lot/wizards/select_lot_view.xml
+++ b/documents_stock_lot/wizards/select_lot_view.xml
@@ -1,7 +1,7 @@
 <odoo>
-    <record id="select_production_lot_view_form" model="ir.ui.view">
-        <field name="name">select.production.lot.view.form</field>
-        <field name="model">select.production.lot</field>
+    <record id="select_lot_view_form" model="ir.ui.view">
+        <field name="name">select.lot.view.form</field>
+        <field name="model">select.lot</field>
         <field name="arch" type="xml">
            <form>
                <group>
